[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rocks_fall"
authors = [{name = "hdp", email = "hdp@pobox.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/hdp/rocks-fall"

[project.optional-dependencies]
test = [
    "parameterized",
]

[tool.black]
target-version = ['py37']

[tool.pylint.'BASIC']
good-names = ["a", "b", "f", "n", "w"]

[tool.pylint.'MASTER']
jobs = 0

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "too-few-public-methods",
]
